<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="main_welcome">Your Guide To Egypt</string>
    <string name="tours">Tours </string>
    <string name="transportation"> Transportation </string>
    <string name="whyegypt">Why Egypt</string>
    <string name="culturaltours">Cultural Tours</string>
    <string name="religioustours">Religious Tours</string>
    <string name="entertaningtours">Entertaning Tours</string>
    <string name="mosesmountin">South Sinai - The Mountain of Moses</string>
    <string name="mosesmountindescerption">"The ascent of 2,285-meter-high Mount Sinai (Jebel Musa in Arabic) is a tiring but extremely rewarding hike that is also very meaningful for pilgrims. Jebel Musa is revered as the mountain that the prophet Moses received the 10 Commandments on and is a sacred mountain to Jews, Christians, and Muslims. "</string>
    <string name="saint">South Sinai - Saint Cathrine</string>
    <string name="saintdescription">,Saint Catherine\'s Monastery, officially \"Sacred Monastery of the God-Trodden Mount Sinai\", lies on the Sinai Peninsula, at the mouth of a gorge at the foot of Mount Sinai, in the city of Saint Catherine, Egypt in the South Sinai Governorate</string>
    <string name="khankhalili">"Cairo - Khan el-Khalili "</string>
    <string name="khankhalilidescription">Khan el-Khalili is a major souk in the historic center of Islamic Cairo. The bazaar district is one of Cairo\'s main attractions for tourists and Egyptians alike.</string>
    <string name="moez">Cairo - El Moez street</string>
    <string name="moezdescription">Muizz Street (Egyptian Arabic: شارع المعز‎ Shareʻ El Muizz, full name; Shariʻa al-Muizz li-Din Illah), also known as Al Moez Ldin Allah Al Fatimi Street in Islamic Cairo, Egypt is one of the oldest streets in Cairo, approximately one kilometer long. A United Nations study found it to have the greatest concentration of medieval architectural treasures in the Islamic world.[1] The street (shariʻa in Arabic) is named for Al-Mu\'izz li-Din Allah, the fourth caliph of the Fatimid dynasty. It stretches from Bab Al-Futuh in the north to Bab Zuweila in the south</string>
    <string name="hakim">Cairo - Al-Hakim Mosque</string>
    <string name="hakimdescription">The Mosque of al-Hakim (Arabic: مسجد الحاكم بأمر الله‎, translit. Masjid al-Ḥākim bi Amr Allāh), nicknamed al-Anwar (Arabic: الانور‎, lit. \'the Illuminated\'),[1] is a major Islamic religious site in Cairo, Egypt. It is named after Al-Hakim bi-Amr Allah (985–1021), the sixth Fatimid caliph and 16th Ismaili Imam.\n</string>
    <string name="hakimdescription2">"The mosque was originally built as an enclosure by the Fatimid vizier Gawhar Al-Siqilli (c. 928–992), but was incorporated into the extended fortifications built by Badr al-Jamali. It consists of an irregular rectangle with four arcades surrounding the courtyard. An unusual feature is the monumental entrance with its projecting stone porch. It is located in \"Islamic Cairo\", on the east side of Muizz Street, just south of Bab Al-Futuh (the northern gate). "</string>
    <string name="hussein">Cairo - AlHussein Mosque and street</string>
    <string name="husseindescription">The Al-Hussain Mosque is a mosque built in 1154. The mosque is located in Cairo, Egypt, near the Khan El-Khalili bazaar. It is considered to be one of the holiest Islamic sites in Egypt</string>
    <string name="salahdin">Cairo - Salahdin Citadel</string>
    <string name="salahdindescription">The Saladin Citadel of Cairo is a medieval Islamic fortification in Cairo, Egypt. The location, on Mokattam hill near the center of Cairo, was once famous for its fresh breeze and grand views of the city</string>
    <string name="sharm">South Sinai - Sharm El-sheikh</string>
    <string name="sharmdescription">Sharm el-Sheikh is an Egyptian resort town between the desert of the Sinai Peninsula and the Red Sea. It\'s known for its sheltered sandy beaches, clear waters and coral reefs. Naama Bay, with a palm tree-lined promenade, is filled with bars and restaurants. Ras Muhammad National Park is a major diving destination, with marine life around the Shark and Yolanda reefs and the Thistlegorm wreck.</string>
    <string name="dahab">South Sinai - Dahab</string>
    <string name="dahabdescription">"Dahab is a small town on the southeast coast of the Sinai Peninsula in Egypt, approximately 80 km northeast of Sharm el-Sheikh. Formerly a Bedouin fishing village, Dahab is now considered to be one of Sinai's most treasured diving destinations. "</string>
    <string name="marsamatrouh">Mersa Matruh</string>
    <string name="marsamatrouhdescription">Marsa Matruh is a resort town on Egypt’s Mediterranean coast, known for its lagoons and white-sand beaches. It’s on a large bay, with the resort stretching along the shore. West of the town, Cleopatra’s Beach is surrounded by rocks, creating a natural pool called Cleopatra’s Bath. Near Rommel’s Beach is the Rommel Museum, with memorabilia and maps, in caves that served as the German WWII commander’s headquarters.</string>
    <string name="hurghada">"Hurghada "</string>
    <string name="hurghadadescription">Hurghada is a beach resort town stretching some 40km along Egypt’s Red Sea coast. It’s renowned for scuba diving, and has numerous dive shops and schools in its modern Sekalla district. There are many restaurants, bars and nightclubs, while the old town, El Dahar, is home to traditional Egyptian coffee shops and souks. Hurghada’s long stretch of sandy beach is lined with resort hotels.</string>
    <string name="nuweiba">"South Sinai - Nuweiba "</string>
    <string name="nuweibadescription">"Nuweiba is a coastal town in the eastern part of Sinai Peninsula, Egypt. Located on the coast of the Gulf of Aqaba . "</string>
    <string name="nuweibadescription2">Between the town and the port are a strip of modern hotels, catering to beach holiday makers and divers. One km north of Nuweiba City, Tarabin village is well known for its Bedouin-style camps where cheap huts are available for rent. Further north, in the direction of Taba, are several other beaches with similar accommodation options.</string>
    <string name="alex">Alexandria</string>
    <string name="alexdescription">Alexandria is a Mediterranean port city in Egypt. During the Hellenistic period, it was home to a lighthouse ranking among the Seven Wonders of the Ancient World as well as a storied library. Today the library is reincarnated in the disc-shaped, ultramodern Bibliotheca Alexandrina. The city also has Greco-Roman landmarks, old-world cafes and sandy beaches. Its 15th-century seafront Qaitbay Citadel is now a museum.</string>
    <string name="abusimbel">Aswan - Abu Simbel temple</string>
    <string name="abusimbeldescription">The Abu Simbel temples are two massive rock temples at Abu Simbel, a village in Nubia,Aswan, southern Egypt, near the border with Sudan. They are situated on the western bank of Lake Nasser ,Founded: Approximately 1264 BCE\n</string>
    <string name="abusimbeldescription2">it is founded: Approximately 1264 BCE ,builder: Ramesses II .</string>
    <string name="philae">Aswan - Philae island and temple</string>
    <string name="phileadescription">"Philae is currently an island in the reservoir of the Aswan Low Dam ,the island contains the Pharonie temple "</string>
    <string name="karnak">Luxor - Karnak temple</string>
    <string name="karnakdescription">"The Karnak Temple Complex, commonly known as Karnak, comprises a vast mix of decayed temples, chapels, pylons, and other buildings in Egypt "</string>
    <string name="kingsvalley">Luxor - Valley of the Kings</string>
    <string name="kingsvalleydescription">"The Valley of the Kings, the Valley of the Gates of the Kings, is a valley in Egypt where, for a period of nearly 500 years from the 16th to 11th century BC, rock cut tombs were excavated for the Pharaohs and powerful nobles of the New Kingdom "</string>
    <string name="pyramids">Giza - Egyptian Pyramids</string>
    <string name="pyramidsdescription">"The oldest and largest of the three pyramids at Giza, known as the Great Pyramid, is the only surviving structure out of the famed seven wonders of the ancient world. It was built for Khufu (Cheops, in Greek), Sneferu's successor and the second of the eight kings of the fourth dynasty. "</string>
    <string name="saqqara">Giza - Saqgara Pyramid</string>
    <string name="saqqaradescreption">"The Pyramid of Djoser, or step pyramid is an archeological remain in the Saqqara necropolis, Egypt, northwest of the city of Memphis. It was built during the 27th century BC for the burial of Pharaoh Djoser by his vizier, Imhotep "</string>
    <string name="egymuem">Cairo - Egyptian Museum</string>
    <string name="egymuesumdescription">"The Egyptian Museum in Cairo contains the world's most extensive collection of pharaonic antiquities; no visit to Egypt is complete without a trip through its galleries. The original collection was established in the late 19th century under Auguste Mariette and housed in Boulaq , current location in Tahrir Square Down town "</string>
    <string name="libalex">Alexandria -Library of Alexandria</string>
    <string name="libalexdescription">The Royal Library of Alexandria or Ancient Library of Alexandria in Alexandria, Egypt, was one of the largest and most significant libraries of the ancient world. It was dedicated to the Muses, the nine goddesses of the arts.[1] It flourished under the patronage of the Ptolemaic dynasty and functioned as a major center of scholarship from its construction in the 3rd century BC until the Roman conquest of Egypt in 30 BC, with collections of works, lecture halls, meeting rooms, and gardens. The library was part of a larger research institution called the Musaeum of Alexandria, where many of the most famous thinkers of the ancient world studied.</string>
    <string name="good_climate">good Climate and fine weather</string>
    <string name="egyptian_food">Delicious Egyptian Cuisine</string>
    <string name="nile_relax">Relax and Cruise the Nile River.</string>
    <string name="temples">Temples, Temples and More Temples.</string>
    <string name="friendly_locals">Mix and Mingle with Friendly Locals</string>
    <string name="airplane">https://www.travelstart.com.eg/</string>
    <string name="buses">https://go-bus.com/en</string>
    <string name="trains">http://www.egypt.gov.eg/English/FAQ/FAQ-Train.aspx</string>
    <string name="airplanes">Airplanes</string>
    <string name="buses2">Buses</string>
    <string name="trains2">Trains</string>
    <string name="reason1">Reason 1</string>
    <string name="reason2">Reason 2</string>
    <string name="reason3">Reason 3</string>
    <string name="reason4">Reason 4</string>
    <string name="reason5">Reason 5</string>
    <string name="Khaleg_Ne3ema">Khaleg Ne\'ema</string>
    <string name="Khaleg_Ne3ema_description">Khaleg Ne\'ema Is a natural bay and tourist area in Sharm El Sheikh (South Sinai governorate). The Gulf is located at the confluence of Asia and Africa, Where there are all the necessary tourist complexes, markets and restaurants of various kinds, in addition to many nightclubs</string>
</resources>
