<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transportation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohamed.tourguideapp.TransportationActivity">

    <TextView
        android:id="@+id/airplanes_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorWelcomeTextView3"
        android:text="@string/airplanes"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />

    <TextView
        android:id="@+id/buses_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorWelcomeTextView3"
        android:text="@string/buses2"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />

    <TextView
        android:id="@+id/trains_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorWelcomeTextView3"
        android:text="@string/trains2"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />


</LinearLayout>