<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tours"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohamed.tourguideapp.ToursActivity">

    <TextView
        android:id="@+id/cultural_tour_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorWelcomeTextView1"
        android:text="@string/culturaltours"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />

    <TextView
        android:id="@+id/religious_tour_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorWelcomeTextView3"
        android:text="@string/religioustours"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />

    <TextView
        android:id="@+id/entertaning_tour_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_view_height"
        android:layout_marginTop="@dimen/spaces"
        android:background="@color/colorAccent"
        android:text="@string/entertaningtours"
        android:textAlignment="center"
        android:textSize="@dimen/activity_main_welcome" />

</LinearLayout>